--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "useragent": "^2.3.0"
   }
 }
